--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,4 @@
+<% @title="TechBro Generator 🚀" %>
 <!DOCTYPE html>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -8,8 +9,7 @@
 
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-<title>TechBro generator</title>
-</head>
+ </head>
 
 <body>
 
